<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/card_recycleview"
        android:foregroundGravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="9dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_History"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_width="0.5dp"
            android:contentDescription="@string/avatar_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_Firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="20dp"
                android:text="@string/firstName"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@+id/icon_History"
                app:layout_constraintStart_toEndOf="@+id/icon_History"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_Lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="20dp"
            android:text="@string/firstName"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@+id/icon_History"
            app:layout_constraintStart_toEndOf="@+id/tv_Firstname"
            android:textSize="20sp"
            android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_TanggalDetection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:text="@string/user_Email"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_Firstname"
                app:layout_constraintStart_toEndOf="@id/icon_History"
                android:textStyle="normal"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_arrow_circle_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>